--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My first web page</title>
+        <title>My first web pages</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/sangria.html">Sangria Title</a>
     </body>
 </html>
