--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/sangria.html">Sangria Title</a>
+
+        <ul>
+            <li><a href="recipes/yourrecipe.html">Recipe Title 1</a></li>
+            <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
+            <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+        </ul>
     </body>
 </html>
