Add Omolette.html and sangria.html and ugari.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
         <a href="recipes/sangria.html">Sangria Title</a>
 
         <ul>
-            <li><a href="recipes/yourrecipe.html">Recipe Title 1</a></li>
-            <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
-            <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+            <li><a href="recipes/Omolette.html">Omolette Recipes</a></li>
+            <li><a href="recipes/ugari.html">Ugari Recipe</a></li>
         </ul>
     </body>
 </html>
