Add Omolette.html and sangria.html and ugari.html

--- a/recipes/Omolette.html
+++ b/recipes/Omolette.html
@@ -19,7 +19,7 @@
         <h2>Steps</h2>
         <ol>
             <li>Break eggs.</li>
-            <li>Add salt.</li>
+            <li>Add some salt.</li>
             <li>mix with green purple.</li>
         </ol>
     </body>
