--- a/recipes/sangria.html
+++ b/recipes/sangria.html
@@ -12,7 +12,7 @@
         </p>
         <h2>Ingredients</h2>
         <ul>
-            <li>Water mellon</li>
+            <li>Mellon</li>
             <li>Sugar</li>
             <li>Water</li>
         </ul>
