--- a/recipes/ugari.html
+++ b/recipes/ugari.html
@@ -20,7 +20,7 @@
         <ol>
             <li>Heat water</li>
             <li>Add cassava paste</li>
-            <li>Mix them</li>
+            <li>Mixing them</li>
         </ol>
     </body>
 </html>
